# misis2023f-23-02-naumov-r-y

./: .gitignore  CMakeLists.txt  status.md
23/: 23.cpp  23z  CMakeLists.txt  Source1.cpp
prj.codeforce/: 0339b.cpp  0978b.cpp  1352a.cpp  1512c.cpp  1717b.cpp  1721b.cpp  1873c.cpp  CMakeLists.txt
prj.codeforces/: 0263a.cpp  0271a.cpp  0276a.cpp  1330a.cpp  1559a.cpp  1649a.cpp  1669d.cpp  1670b.cpp  1744c.cpp  1873d.cpp  CMakeLists.txt  dz
prj.lab/: CMakeLists.txt
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/prj.codeforces/: 0004a.cpp  0136b.cpp  0617a.cpp  0978a.cpp  1404a.cpp  1649a.cpp  1670b.cpp  1690d.cpp  1734b.cpp  1744c.cpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_rational.cpp
