add_executable(4a 0004a.cpp)
add_executable(136b 0136b.cpp)
add_executable(263a 0263a.cpp)
add_executable(276a 0276a.cpp)
add_executable(271a 0271a.cpp)
add_executable(339b 0339b.cpp)
add_executable(617a 0617a.cpp)
add_executable(978a 0978a.cpp)
add_executable(978b 0978b.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1559a 1559a.cpp)
add_executable(1649a 1649a.cpp)
add_executable(1690d 1690d.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1734b 1734b.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1670b 1670b.cpp)